--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,63 @@
 body {
 
-    background-color: aqua;
+    background-color: #00ffffaa;
+   
 }
 h1,footer {
     text-align: center;
+    padding: 5%;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+
+
+.container {
+background-color: white;
+max-width: 500px;
+display: block;
+text-align: center;
+margin: 0 auto;
+box-shadow: rgba(17, 12, 46, 0.381) 0px 48px 100px 0px;
+border-radius: 30px;
+padding: 2%;
+
+
+}
+
+select {
+    width: 440px;
+    height: 50px;
+    border-radius: 3px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 100%;
+   
+    
+}
+.city {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 40px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding: 3%;
+border-bottom: 1px dotted aqua;
+border
+
+
+
+}
+
+.time {
+font-size: 22px;
+   font-weight: bold;
+   margin-top: 20px;
+}
+
+.date {
+    text-align: left;
+    margin-inline: initial;
+}
+
+.time small {
+    font-size: 10px;
+    vertical-align: middle;
+}
