--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,18 @@ padding: 2%;
 }
 
 select {
-    width: 440px;
+    width: 470px;
     height: 50px;
     border-radius: 3px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 100%;
+    border-color: aqua;
+
    
     
 }
+
+
 .city {
     display: flex;
     justify-content: space-between;
@@ -40,16 +44,18 @@ select {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     padding: 3%;
 border-bottom: 1px dotted aqua;
-border
 
-
-
+text-align: left;
+    margin-inline: inherit;
 }
 
+
+
+
 .time {
-font-size: 22px;
+font-size: 20px;
    font-weight: bold;
-   margin-top: 20px;
+   margin-top: 5%;
 }
 
 .date {
