--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ padding: 2%;
 }
 
 select {
-    width: 470px;
+    width: 80%;
     height: 50px;
     border-radius: 3px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
